syntax = "proto3";

package api;

option go_package = "./api";

service IdGenerator {
    rpc Next(UserId) returns (ID) {}
    rpc NextByUserIds(UserIds) returns (IDs) {}
    rpc SlaveNextByUserIds(UserIds) returns (IDs) {}
}

message UserId {
    uint64 userId = 1;
}
message UserIds {
    repeated uint64 userIds = 1;
}
message ID {
    uint64 id = 1;
}
message IDs {
    map<uint64, uint64> ids = 1;
}
